# aws-nitro-enclaves-samples

./: README.md
att_doc_retriever_sample/: Dockerfile  README.md
att_doc_retriever_sample/py/: att_doc_retriever_sample.py
att_doc_retriever_sample/rs/: Cargo.toml
att_doc_retriever_sample/rs/src/: main.rs
multiple-enclaves/: README.md  proxy.py
multiple-enclaves/client/: Dockerfile  client.py
multiple-enclaves/server/: Dockerfile  server.py
vsock_sample/go/: Dockerfile.client  Dockerfile.server  README.md  go.mod  go.sum  vsock-sample.go
vsock_sample/py/: Dockerfile.client  Dockerfile.server  README.md  vsock-sample.py
vsock_sample/rs/: Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  README.md
vsock_sample/rs/src/: command_parser.rs  lib.rs  main.rs  protocol_helpers.rs  utils.rs
vsock_sample/src/: lib.rs  protocol_helpers.rs  utils.rs
